[package]
name = "trm"
version = "1.0.0"
edition = "2021"
authors = ["Anirudh S. Kumar <anirudh.skumar.03@gmail.com>"]
description = "Temporary rm. A safer alternative to rm."
license = "MIT"
repository = "https://github.com/Anirudh-S-Kumar/trm"
readme = "README.md"
keywords = ["cli", "trash", "delete", "safe", "trash-cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
lscolors = { version = "0.20.0", features = ["crossterm"] }
nu-ansi-term = "0.50.1"
chrono = { version = "0.4.39", features = ["serde"] }
uutils_term_grid = "0.6.0"
terminal_size = "0.4.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
dircpy = {version = "0.3.19", features = ["jwalk"]}
comfy-table = "7.1.3"
humantime = "2.1.0"
walkdir = "2.5.0"
